--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="formulario">
             <form>
                 <div class="items">
-                    <input type="text" name="nome-completo" id="nome" class="item" placeholder="Nome completo *">
-                    <p class="campo">campo obrigatório</p>
+                    <input type="text" name="nome" id="nome" class="item" placeholder="Nome completo *">
+                    <span class="campo">campo obrigatório</span>
                 </div>
 
                 <div class="items">
@@ -43,7 +43,7 @@
 
                 <p class="campos">*campos obrigatórios</p> <br> 
 
-                <button class="botao" onclick="enviarDados()">Enviar</button>
+                <input class="botao"  type="submit" value="Enviar">
             </form>
         </div>
 
